# hobby-tracker

./: .gitignore  README.md  pyproject.toml  run.command
tally/: __init__.py  config.py  db.py  hobbies.py  stats.py
tally/web/: app.py  covers.py
tally/web/static/: style.css
tally/web/static/covers/: README.txt
tally/web/templates/: _daily.html  base.html  form.html  gallery.html  today.html  tracker.html
tests/: test_forms.py  test_stats.py
